# generic-validated

./: .gitignore  README.md  generic-validated.cabal  package.yaml  stack.yaml
src/: GenericValidated.hs  Validated.hs
src/Data/Generic/HKD/: Types.hs
src/GenericValidated/: Codes.hs  Predicates.hs  Validated.hs
src/GenericValidated/Predicates/: Base.hs  Text.hs  Types.hs  Util.hs
src/Validated/: Codes.hs  Predicates.hs  Validated.hs
