cabal-version: 2.4
name:          generic-validated
version:       0.1.0.0
description:   See README.md
build-type:    Simple

library
  hs-source-dirs: src
  exposed-modules:
    GenericValidated
    GenericValidated.Codes
    GenericValidated.Predicates
    GenericValidated.Predicates.Base
    GenericValidated.Predicates.Text
    GenericValidated.Predicates.Types
    GenericValidated.Predicates.Util
    GenericValidated.Validated
  build-depends:
      aeson
    , barbies
    , base
    , generic-deriving
    , higgledy
    , text
    , unordered-containers
    , validation
  default-language: Haskell2010
